--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "telegram",
     "rae"
   ],
-  "author": "Javi",
+  "author": "Javi & Matías con tilde",
   "license": "MIT",
   "dependencies": {
+    "node-schedule": "^1.3.0",
     "node-telegram-bot-api": "^0.30.0",
     "request": "^2.83.0"
   }
